--- a/package.json
+++ b/package.json
@@ -29,9 +29,14 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install npm && run build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "engines": {
+    "node": "10.16.0",
+    "npm": "6.14.7"
   },
   "eslintConfig": {
     "extends": "react-app"
